fuel-core/src/snapshots/fuel_core__chain_conf__tests__snapshot_configurable_block_height.snap
---
source: fuel-core/src/chain_conf.rs
expression: json

---
{
  "chain_name": "local_testnet",
  "block_production": "Instant",
  "parent_network": {
    "type": "LocalTest"
  },
  "initial_state": {
    "coins": [],
    "contracts": [],
    "height": 348700191
  }
}
