fuel-core/src/snapshots/fuel_core__chain_conf__tests__snapshot_simple_coin_state.snap
---
source: fuel-core/src/chain_conf.rs
expression: json

---
{
  "chain_name": "",
  "block_production": "Instant",
  "parent_network": {
    "type": "LocalTest"
  },
  "initial_state": {
    "coins": [
      {
        "utxo_id": "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
        "block_created": 899315401,
        "maturity": 3832353787,
        "owner": "0xa417a2d8d9ed086c0f3f03f94ec89a67bfdc6a1e22b69d667e5ac8055d00a3f5",
        "amount": 4881068737172140656,
        "color": "0xbcb10d053242a9719dca480b4f4910fa60671f2068086498c72e30fc8b969e08"
      }
    ],
    "contracts": []
  }
}
