fuel-core/src/snapshots/fuel_core__chain_conf__tests__snapshot_simple_contract.snap
---
source: fuel-core/src/chain_conf.rs
expression: json

---
{
  "chain_name": "local_testnet",
  "block_production": "Instant",
  "parent_network": {
    "type": "LocalTest"
  },
  "initial_state": {
    "contracts": [
      {
        "code": "0x24400000",
        "salt": "0x0000000000000000000000000000000000000000000000000000000000000000"
      }
    ]
  }
}
