fuel-core/src/snapshots/fuel_core__chain_conf__tests__snapshot_simple_contract_state.snap
---
source: fuel-core/src/chain_conf.rs
expression: json

---
{
  "chain_name": "",
  "block_production": "Instant",
  "parent_network": {
    "type": "LocalTest"
  },
  "initial_state": {
    "coins": [],
    "contracts": [
      {
        "code": "0x24400000",
        "salt": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "state": [
          [
            "0x61644a25da5ad31754e23bc1eca8c766a61ceaa8c60ddc65f158a30209256e35",
            "0xc9fba417a2d8d9ed086c0f3f03f94ec89a67bfdc6a1e22b69d667e5ac8055d00"
          ]
        ]
      }
    ]
  }
}
